--- a/mobile.css
+++ b/mobile.css
@@ -49,7 +49,8 @@ body {
 
 .infoSection h3 {
 
-    font-family: IBM Plex Mono SemiBold;
+    font-family: IBM Plex Mono;
+    font-weight: 600;
     font-size: 17pt;
     padding: 0 0 0 10%;
     
